--- a/plant_client_light/Makefile
+++ b/plant_client_light/Makefile
@@ -24,14 +24,14 @@
 # ARDUINO = EEPROM Esplora Ethernet Firmata GSM 
 #	LiquidCrystal Robot_Control Robot_Motor SD 
 #
-APP_LIBS_LIST = 0
+APP_LIBS_LIST = Arduino Wire
 
 # List user's libraries here 
 # default = 0 = none
 #
 
 #
-USER_LIBS_LIST = 0
+USER_LIBS_LIST = dht11 TSL2561 plants_framework MemoryFree
 
 # List core, application and user's libraries to be excluded
 # For example, WiFi may crash on Arduino 1.0.2, Esplora on Arduino 1.0.3, Firmata on Teensy 3.0,
