--- a/plant_client_light/Makefile
+++ b/plant_client_light/Makefile
@@ -31,7 +31,7 @@ APP_LIBS_LIST = Arduino Wire
 #
 
 #
-USER_LIBS_LIST = dht11 TSL2561 plants_framework MemoryFree
+USER_LIBS_LIST = dht11 TSL2561 XBee
 
 # List core, application and user's libraries to be excluded
 # For example, WiFi may crash on Arduino 1.0.2, Esplora on Arduino 1.0.3, Firmata on Teensy 3.0,
